--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
   "name": "Centurion",
   "version": "3.5.0",
-  "description": "It does amazing things",
+  "description": "Centurion is a web-based framework for rapid prototyping and provides a core for building larger web projects",
+  "homepage": "http://www.centurionframework.com",
+  "author": {
+    "name": "Justin Hough",
+    "email": "<justin@justinhough.com>",
+    "url": "http://www.justinhough.com/"
+  },
   "main": "Gruntfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -23,10 +29,11 @@
   },
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-contrib-compass": "^0.8.0",
     "grunt-contrib-connect": "^0.8.0",
     "grunt-contrib-copy": "^0.6.0",
+    "grunt-contrib-sass": "^0.8.1",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-gh-pages": "^0.9.1",
     "grunt-open": "^0.2.3",
     "grunt-processhtml": "^0.3.3",
     "grunt-sass": "~0.12.1",
