updating name in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Centurion",
+  "name": "centurion-framework",
   "version": "3.5.0",
   "description": "Centurion is a web-based framework for rapid prototyping and provides a core for building larger web projects",
   "homepage": "http://www.centurionframework.com",
