--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jhough10/centurion.git"
+    "url": "https://github.com/justinhough/centurion.git"
   },
   "keywords": [
     "centurion",
@@ -22,7 +22,7 @@
   ],
   "license": "GPL",
   "bugs": {
-    "url": "https://github.com/jhough10/centurion/issues"
+    "url": "https://github.com/justinhough/centurion/issues"
   },
   "dependencies": {
     "grunt": "~0.4.5"
