--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "centurion-framework",
-  "version": "3.5.1",
+  "version": "3.5.2",
   "description": "Centurion is a web-based framework for rapid prototyping and provides a core for building larger web projects",
   "homepage": "http://www.centurionframework.com",
   "author": {
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jhough10/centurion.git"
+    "url": "https://github.com/justinhough/centurion.git"
   },
   "keywords": [
     "centurion",
@@ -22,7 +22,7 @@
   ],
   "license": "GPL",
   "bugs": {
-    "url": "https://github.com/jhough10/centurion/issues"
+    "url": "https://github.com/justinhough/centurion/issues"
   },
   "dependencies": {
     "grunt": "~0.4.5"
