--- a/package.json
+++ b/package.json
@@ -29,14 +29,13 @@
   },
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-contrib-connect": "^0.8.0",
-    "grunt-contrib-copy": "^0.6.0",
-    "grunt-contrib-sass": "^0.8.1",
+    "grunt-contrib-connect": "^0.9.0",
+    "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-gh-pages": "^0.9.1",
-    "grunt-open": "^0.2.3",
-    "grunt-processhtml": "^0.3.3",
-    "grunt-sass": "~0.12.1",
-    "load-grunt-tasks": "~0.2.0"
+    "grunt-include-replace": "^3.0.0",
+    "grunt-processhtml": "^0.3.7",
+    "grunt-sass": "^0.17.0",
+    "load-grunt-tasks": "^3.1.0"
   }
 }
