--- a/package.json
+++ b/package.json
@@ -30,15 +30,22 @@
     "url": "https://github.com/justinhough/centurion/issues"
   },
   "dependencies": {
-    "grunt": "^0.4.5",
+    "grunt": "^0.4.5"
+  },
+  "devDependencies": {
+    "grunt-autoprefixer": "^3.0.3",
     "grunt-banner": "^0.3.1",
+    "grunt-concurrent": "^1.0.0",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-compress": "^0.13.0",
     "grunt-contrib-connect": "^0.9.0",
     "grunt-contrib-copy": "^0.7.0",
+    "grunt-contrib-uglify": "^0.9.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-gh-pages": "^0.9.1",
+    "grunt-http-server": "^1.4.0",
     "grunt-include-replace": "^3.0.0",
-    "grunt-processhtml": "^0.3.7",
-    "grunt-prompt": "^1.3.0",
+    "grunt-newer": "^1.1.0",
     "grunt-sass": "^0.17.0",
     "load-grunt-tasks": "^3.1.0"
   }
