--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "grunt": "^0.4.5"
   },
   "devDependencies": {
-    "grunt-autoprefixer": "^3.0.3",
+    "autoprefixer-core": "^5.2.0",
     "grunt-banner": "^0.3.1",
     "grunt-concurrent": "^1.0.0",
     "grunt-contrib-clean": "^0.6.0",
@@ -46,6 +46,7 @@
     "grunt-http-server": "^1.4.0",
     "grunt-include-replace": "^3.0.0",
     "grunt-newer": "^1.1.0",
+    "grunt-postcss": "^0.5.1",
     "grunt-sass": "^0.17.0",
     "load-grunt-tasks": "^3.1.0"
   }
