--- a/package.json
+++ b/package.json
@@ -29,11 +29,9 @@
   "bugs": {
     "url": "https://github.com/justinhough/centurion/issues"
   },
-  "dependencies": {
-    "grunt": "^0.4.5"
-  },
   "devDependencies": {
     "autoprefixer-core": "^5.2.0",
+    "grunt": "^0.4.5",
     "grunt-banner": "^0.3.1",
     "grunt-concurrent": "^1.0.0",
     "grunt-contrib-clean": "^0.6.0",
@@ -47,7 +45,7 @@
     "grunt-include-replace": "^3.0.0",
     "grunt-newer": "^1.1.0",
     "grunt-postcss": "^0.5.1",
-    "grunt-sass": "^0.17.0",
+    "grunt-sass": "^1.1.0",
     "load-grunt-tasks": "^3.1.0"
   }
 }
