--- a/package.json
+++ b/package.json
@@ -41,10 +41,12 @@
     "grunt-contrib-uglify": "^0.9.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-gh-pages": "^0.9.1",
+    "grunt-github-releaser": "^0.1.18",
     "grunt-http-server": "^1.4.0",
     "grunt-include-replace": "^3.0.0",
     "grunt-newer": "^1.1.0",
     "grunt-postcss": "^0.5.1",
+    "grunt-prompt": "^1.3.3",
     "grunt-sass": "^1.1.0",
     "load-grunt-tasks": "^3.1.0"
   }
