--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "centurion-framework",
   "projectName": "Centurion Framework",
-  "version": "3.6.2",
+  "version": "3.6.3",
   "simpleDescription": "A Web Framework",
   "description": "Centurion is a web-based framework for rapid prototyping and provides a core for building larger web projects",
   "homepage": "http://www.centurionframework.com",
@@ -48,6 +48,7 @@
     "grunt-postcss": "^0.5.1",
     "grunt-prompt": "^1.3.3",
     "grunt-sass": "^1.1.0",
+    "grunt-scss-lint": "^0.3.8",
     "load-grunt-tasks": "^3.1.0"
   }
 }
