--- a/package.json
+++ b/package.json
@@ -1,54 +1,55 @@
 {
   "name": "centurion-framework",
-  "projectName": "Centurion Framework",
-  "version": "3.6.3",
-  "simpleDescription": "A Web Framework",
-  "description": "Centurion is a web-based framework for rapid prototyping and provides a core for building larger web projects",
-  "homepage": "http://www.centurionframework.com",
+  "version": "4.0.0",
+  "description": "Centurion is a web framework for rapid prototyping and a base for larger web projects.",
   "author": {
     "name": "Justin Hough",
     "email": "<justin@justinhough.com>",
     "url": "http://www.justinhough.com/"
   },
-  "main": "Gruntfile.js",
+  "contributors": [],
+  "license": "GPL",
+  "repository": "justinhough/centurion",
+  "homepage": "http://www.centurionframework.com",
+  "bugs": "https://github.com/justinhough/centurion/issues",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 0",
+    "styleguide": "nucleus --config config.nucleus.json",
+    "prerelease": "npm-run-series changelog",
+    "sass": "node-sass -r ./lib/sass/ -o ./dist/css/",
+    "release": "gh-release",
+    "prestart": "npm-run-series sass",
+    "start": "parallelshell 'rerun-script'"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/justinhough/centurion.git"
+  "watches": {
+    "test": "echo \"Watch test specified\" && exit 1"
   },
+  "pre-commit": [
+    "test"
+  ],
   "keywords": [
     "centurion",
     "framework",
-    "web",
     "responsive",
-    "awesome"
+    "css",
+    "sass",
+    "builder",
+    "prototyping"
   ],
-  "license": "GPL",
-  "bugs": {
-    "url": "https://github.com/justinhough/centurion/issues"
-  },
   "devDependencies": {
-    "autoprefixer-core": "^5.2.0",
-    "grunt": "^0.4.5",
-    "grunt-banner": "^0.3.1",
-    "grunt-concurrent": "^1.0.0",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-compress": "^0.13.0",
-    "grunt-contrib-connect": "^0.9.0",
-    "grunt-contrib-copy": "^0.7.0",
-    "grunt-contrib-uglify": "^0.9.1",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-gh-pages": "^0.9.1",
-    "grunt-github-releaser": "^0.1.18",
-    "grunt-http-server": "^1.4.0",
-    "grunt-include-replace": "^3.0.0",
-    "grunt-newer": "^1.1.0",
-    "grunt-postcss": "^0.5.1",
-    "grunt-prompt": "^1.3.3",
-    "grunt-sass": "^1.1.0",
-    "grunt-scss-lint": "^0.3.8",
-    "load-grunt-tasks": "^3.1.0"
+    "autoprefixer": "^7.2.4",
+    "eslint": "^4.14.0",
+    "gh-release": "^3.1.1",
+    "ncp": "^2.0.0",
+    "node-sass": "^4.7.2",
+    "npm-run-series": "^1.0.0",
+    "nucleus-styleguide": "^1.1.1",
+    "parallelshell": "^3.0.2",
+    "postcss": "^6.0.15",
+    "postcss-cli": "^4.1.1",
+    "pre-commit": "^1.2.2",
+    "rerun-script": "^0.6.0",
+    "sass-lint": "^1.12.1"
   }
 }
