--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "grunt-prompt": "^1.3.3",
     "grunt-sass": "^3.0.2",
     "grunt-scss-lint": "^0.3.8",
-    "load-grunt-tasks": "^3.1.0"
+    "load-grunt-tasks": "^3.1.0",
+    "node-sass": "^4.9.4"
   }
 }
