--- a/package.json
+++ b/package.json
@@ -30,7 +30,11 @@
     "url": "https://github.com/justinhough/centurion/issues"
   },
   "devDependencies": {
-    "autoprefixer-core": "^5.2.0",
+    "autoprefixer": "^9.3.1",
+    "cryptiles": ">=4.1.2",
+    "debug": ">=2.6.9",
+    "ecstatic": ">=2.0.0",
+    "fresh": ">=0.5.2",
     "grunt": "^1.0.3",
     "grunt-banner": "^0.6.0",
     "grunt-concurrent": "^2.3.1",
@@ -49,17 +53,13 @@
     "grunt-prompt": "^1.3.3",
     "grunt-sass": "^3.0.2",
     "grunt-scss-lint": "^0.5.0",
+    "hawk": ">=3.1.3",
+    "hoek": ">=4.2.1",
     "load-grunt-tasks": "^3.1.0",
-    "node-sass": "^4.9.4",
+    "lodash": ">=4.17.5",
+    "mime": ">=1.4.1",
     "minimatch": ">=3.0.2",
     "negotiator": ">=0.6.1",
-    "cryptiles": ">=4.1.2",
-    "debug": ">=2.6.9",
-    "hawk": ">=3.1.3",
-    "lodash": ">=4.17.5",
-    "fresh": ">=0.5.2",
-    "mime": ">=1.4.1",
-    "hoek": ">=4.2.1",
-    "ecstatic": ">=2.0.0"
+    "node-sass": "^4.9.4"
   }
 }
