--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "contributors": [],
   "license": "GPL",
   "repository": "justinhough/centurion",
-  "homepage": "http://www.centurionframework.com",
   "bugs": "https://github.com/justinhough/centurion/issues",
   "main": "index.js",
   "scripts": {
@@ -71,6 +70,9 @@
     "mime": ">=1.4.1",
     "minimatch": ">=3.0.2",
     "negotiator": ">=0.6.1",
-    "node-sass": "^4.9.4"
+    "node-sass": "^4.9.4",
+    "npm-run-series": "^1.0.1",
+    "nucleus-styleguide": "^1.1.1",
+    "parallelshell": "^3.0.2"
   }
 }
