--- a/package.json
+++ b/package.json
@@ -29,6 +29,11 @@
   "bugs": {
     "url": "https://github.com/justinhough/centurion/issues"
   },
+  "browserslist": [
+    "last 2 version",
+    "> 5%",
+    "ie > 8"
+  ],
   "devDependencies": {
     "autoprefixer": "^9.3.1",
     "cryptiles": ">=4.1.2",
