--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "ie > 8"
   ],
   "devDependencies": {
-    "autoprefixer": "^9.3.1",
+    "autoprefixer": "^9.6.1",
     "cryptiles": ">=4.1.2",
     "debug": ">=2.6.9",
     "ecstatic": ">=2.0.0",
@@ -61,7 +61,7 @@
     "hawk": ">=3.1.3",
     "hoek": ">=4.2.1",
     "load-grunt-tasks": "^5.0.0",
-    "lodash": ">=4.17.5",
+    "lodash": "^4.17.14",
     "mime": ">=1.4.1",
     "minimatch": ">=3.0.2",
     "negotiator": ">=0.6.1",
