--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "debug": ">=2.6.9",
     "ecstatic": ">=2.0.0",
     "fresh": ">=0.5.2",
-    "grunt": "^1.0.4",
+    "grunt": ">=1.3.0",
     "grunt-banner": "^0.6.0",
     "grunt-concurrent": "^3.0.0",
     "grunt-contrib-clean": "^2.0.0",
