--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ie > 8"
   ],
   "devDependencies": {
+    "@lodder/grunt-postcss": "^3.1.0",
     "autoprefixer": "^10.3.7",
     "cryptiles": ">=4.1.2",
     "debug": ">=4.3.2",
@@ -54,7 +55,6 @@
     "grunt-http-server": "^2.1.0",
     "grunt-include-replace": "^5.0.0",
     "grunt-newer": "^1.3.0",
-    "grunt-postcss": "^0.9.0",
     "grunt-prompt": "^1.3.3",
     "grunt-sass": "^3.1.0",
     "grunt-scss-lint": "^0.5.0",
@@ -65,6 +65,8 @@
     "mime": ">=2.5.2",
     "minimatch": ">=3.0.4",
     "negotiator": ">=0.6.2",
-    "node-sass": "^6.0.1"
+    "node-sass": "^6.0.1",
+    "postcss": "^8.3.11",
+    "postcss-cli": "^9.0.1"
   }
 }
